@@ -89,7 +89,8 @@ void
 Rpg::LoggerOutputTty::logHeader(const LogHeader*lh)
 {
   cout << "Logger started for '" << lh->program_name 
-       << " v"<< lh->program_version<< "'" << endl;
+       << " v"<< lh->program_version<< "'" << endl
+       << "Compiled " << lh->compil_date << " at " << lh->compil_time << endl;
 }
 
 void
